[package]
name = "git-cf"
version = "0.1.1"
authors = ["Akihisa Yagi <capra314cabra@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "This is a git extension which compresses files into one file and also restores them from it. It is useful when you need to work with files which is unfamiliar to git, such as binary files or security ones."
keywords = ["git", "extension", "binary"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
homepage = "https://github.com/capra314cabra/git-cf"
repository = "https://github.com/capra314cabra/git-cf"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.14"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.3"
simplelog = "0.10.0"
termcolor = "1.1.2"
zip = "0.5"
